[package]
name = "runtime_call_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.0"
proc-macro-error = "1.0.4"
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
frame-metadata = { version = "15.1.0", features = ["v14", "v15-unstable", "std"] }
subxt-codegen = { git = "https://github.com/paritytech/subxt", branch = "jsdw-nostd-codegen", default-features = false }
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
quote = "1.0.8"
hex = "0.4.3"
proc-macro2 = "1.0.55"
scale-info = "2.6.0"