[package]
name = "no_std_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# The macro relies on these external crates existing:
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["bit-vec", "derive"] }

runtime_call_macro = { path = ".." }
